--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="viewport" content="width-device-width, initial-scale-1.0">
+    <link href="style/style.css" rel="stylesheet" type="text/css">
     <title>My portfolio</title>
 </head>
 <body>
-    <h1>This is my portfolio!</h1>
+    <h1>Alessio Serra</h1>
 </body>
 </html>
